Colaboratory를 통해 생성됨

--- a/Word2Vec이해하기.ipynb
+++ b/Word2Vec이해하기.ipynb
@@ -1017,12 +1017,12 @@
       "source": [
         "from gensim.models import Word2Vec\n",
         "\n",
-        "model=Word2Vec(sentences=tokenized_data, vector_size=100, window=5, min_count=5, workers=4, sg=1)"
+        "model=Word2Vec(sentences=tokenized_data, vector_size=100, window=5, min_count=5, workers=4, sg=0)"
       ],
       "metadata": {
         "id": "gKmuvtdE-s4d"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -1032,10 +1032,25 @@
         "#완성된 임베딩 매트릭스의 크기 확인"
       ],
       "metadata": {
-        "id": "sD9Xl8rO-_T0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sD9Xl8rO-_T0",
+        "outputId": "6ead2ae6-574c-46da-8233-6de8f4f358f3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(17947, 100)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1044,10 +1059,22 @@
         "#최민식과 유사한 단어들"
       ],
       "metadata": {
-        "id": "Gm7Rob8r_Ext"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gm7Rob8r_Ext",
+        "outputId": "2a827c31-0ae5-4e93-8a29-ee06ae155d92"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('홉킨스', 0.871120274066925), ('최민수', 0.8689658641815186), ('한석규', 0.8683159947395325), ('서영희', 0.8629263639450073), ('안성기', 0.8589861392974854), ('채민서', 0.8589480519294739), ('안소니', 0.8552877306938171), ('조재현', 0.8544114232063293), ('이정재', 0.8524987101554871), ('신들리다', 0.8521562218666077)]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1055,10 +1082,22 @@
         "print(model.wv.most_similar(\"히어로\"))"
       ],
       "metadata": {
-        "id": "IcEaBhaH_NBt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IcEaBhaH_NBt",
+        "outputId": "03e88937-06e6-4441-ebe9-1684fd60a76e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('느와르', 0.858311653137207), ('무협', 0.8371226787567139), ('슬래셔', 0.8232268691062927), ('호러', 0.8225346207618713), ('무비', 0.8123359084129333), ('물', 0.7954079508781433), ('블록버스터', 0.7918878793716431), ('홍콩', 0.7906494736671448), ('교과서', 0.783221960067749), ('물의', 0.782833993434906)]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1074,7 +1113,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRunrc9uQbpanoOCy/0I7E",
+      "authorship_tag": "ABX9TyMqE27CwORLj0zSooBX6ADI",
       "include_colab_link": true
     },
     "kernelspec": {
