Colaboratory를 통해 생성됨

--- a/머신러닝.ipynb
+++ b/머신러닝.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlh7UonvRbu6IGwCw1LhzB",
+      "authorship_tag": "ABX9TyPtm6qi2s2FvYOr0/ygxjU7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1184,7 +1184,8 @@
         "plt.plot(x, y3, 'b', linestyle='--') # x + 1.5\n",
         "plt.plot([0,0],[1.0,0.0], ':') # 가운데 점선 추가\n",
         "plt.title('Sigmoid Function')\n",
-        "plt.show()"
+        "plt.show()\n",
+        "#b의 값에 따라서 그래프가 이동을 하였는데, 0.5 이상이면 1, 이하이면 0으로 만들어 이진 문제를 분류할 수 있다."
       ],
       "metadata": {
         "colab": {
@@ -1207,6 +1208,33 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   비용함수 : 로지스틱 회귀도 경사하강법을 사용하여 w를 찾지만, 비용함수로 평균제곱오차를 사용하지는 않는다. -> 글로벌 미니멈(전체 함수에 걸쳐 최솟값)이 아닌 로컬 미니멈(특정 구역에서의 최솟값)에 빠질 가능성이 높기 때문\n",
+        "\n",
+        "*   로지스틱 회귀에서는 가중치를 최소화하는 목적함수 J(w)를 찾아야한다.\n",
+        "\n",
+        "\n",
+        "*   if y=1(실제값) -> cost(H(x), y) = -log(H(x))\n",
+        "*   실제값이 1일때 y의 값이 0에 가까워질수록 오차가 커진다. -> H(x)가 1이 되면 cost가 0이 된다. 0이면 cost가 발산\n",
+        "*   if y=0(실제값) -> cost(H(x), y) = -log(1-H(x))\n",
+        "*   실제값이 0일때 y의 값이 1에 가까워질수록 오차가 커진다. -> H(x)가 0이 되면 cost가 0이 된다. 1이면 cost가 발산\n",
+        "\n",
+        "\n",
+        "*   항목 추가\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YIVHhgSEdk-L"
+      }
     },
     {
       "cell_type": "code",
