Colaboratory를 통해 생성됨

--- a/워드_임베딩.ipynb
+++ b/워드_임베딩.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ7a8YSnyLxrHtXGMKBVmO",
+      "authorship_tag": "ABX9TyMDd8E0QXLGuqQNgPp+O/9Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,7 +188,12 @@
         "from gensim.models import Word2Vec\n",
         "from gensim.models import KeyedVectors\n",
         "\n",
-        "model=Word2Vec(sentences=result, vector_size=100, window=) #window는 주변 2n개의 단어"
+        "model=Word2Vec(sentences=result, vector_size=100, window=)\n",
+        "#vector_size는 데이터가 적을 땐 크게, 데이터가 많을 땐 작게(150~300)\n",
+        "#window는 훈련시 앞 뒤로 고려하는 단어의 개수\n",
+        "#min_count는 해당 빈도수보다 적게 등장할 경우 모델 학습에서 배제\n",
+        "#worker은 스레드 개수. 스레드가 많아질수록 빌드 속도가 빨라진다.(본인 컴퓨터 스펙에 맞게 쓴다.)\n",
+        "#sg 0=CBOW(중심단어 예측) 1=Skipgram(주변단어 예측)"
       ],
       "metadata": {
         "id": "F6Msg08VIBsH"
