Colaboratory를 통해 생성됨

--- a/워드_임베딩.ipynb
+++ b/워드_임베딩.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDd8E0QXLGuqQNgPp+O/9Q",
+      "authorship_tag": "ABX9TyPcR5f1Bt8nGWCW1awWGmfI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,11 +184,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#Word2Vec 훈련\n",
+        "#Word2Vec 학습시키기\n",
         "from gensim.models import Word2Vec\n",
         "from gensim.models import KeyedVectors\n",
         "\n",
-        "model=Word2Vec(sentences=result, vector_size=100, window=)\n",
+        "model=Word2Vec(sentences=result, vector_size=100, window=5, min_count=5, workers=4, sg=0)\n",
         "#vector_size는 데이터가 적을 땐 크게, 데이터가 많을 땐 작게(150~300)\n",
         "#window는 훈련시 앞 뒤로 고려하는 단어의 개수\n",
         "#min_count는 해당 빈도수보다 적게 등장할 경우 모델 학습에서 배제\n",
@@ -197,6 +197,40 @@
       ],
       "metadata": {
         "id": "F6Msg08VIBsH"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_result=model.wv.most_similar('man')\n",
+        "#Word2Vec는 입력한 'man'에 대해서 가장 유사한 단어들을 출력해주는 기능이다.\n",
+        "print(model_result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V3kc8t8GZ2h2",
+        "outputId": "eff8f4c6-77c9-4b0a-978e-1c465691cd29"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('woman', 0.8416481614112854), ('guy', 0.8075767755508423), ('lady', 0.7642030119895935), ('boy', 0.758362352848053), ('girl', 0.7405058145523071), ('gentleman', 0.7271239757537842), ('poet', 0.6821939945220947), ('kid', 0.6817570924758911), ('soldier', 0.6721681356430054), ('friend', 0.6577139496803284)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oxHr7C9WaChC"
       },
       "execution_count": null,
       "outputs": []
