Colaboratory를 통해 생성됨

--- a/워드_임베딩.ipynb
+++ b/워드_임베딩.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcR5f1Bt8nGWCW1awWGmfI",
+      "authorship_tag": "ABX9TyOAcsv3WVTrSi7MuPvk5/6l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,9 +228,47 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Word2Vec 모델 저장 및 로드\n",
+        "model.wv.save_word2vec_format('eng_w2v') #모델 저장\n",
+        "loaded_model=KeyedVectors.load_word2vec_format('eng_w2v') #모델 로드"
+      ],
       "metadata": {
         "id": "oxHr7C9WaChC"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_result=loaded_model.most_similar('man')\n",
+        "print(model_result)\n",
+        "#똑같이 출력해보기"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oy-Mm9zdalm-",
+        "outputId": "e743e914-744c-49b3-dabb-cd517cb073e6"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('woman', 0.8416481614112854), ('guy', 0.8075767755508423), ('lady', 0.7642030119895935), ('boy', 0.758362352848053), ('girl', 0.7405058145523071), ('gentleman', 0.7271239757537842), ('poet', 0.6821939945220947), ('kid', 0.6817570924758911), ('soldier', 0.6721681356430054), ('friend', 0.6577139496803284)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EBdEO2JRar5l"
       },
       "execution_count": null,
       "outputs": []
