Colaboratory를 통해 생성됨

--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4aQnnL+Wtx5+R1P6e3H7u",
+      "authorship_tag": "ABX9TyODuzXHTSgxxeAvimGAivfD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "\n",
         "timesteps=10 #시점의 수 -> 문장의 길이(input_length)\n",
         "input_dim=4 #입력의 수 -> 벡터의 차원\n",
-        "hidden_units=8 #은닉 상태의 크기 -> 은닉에서 반복할 횟수(output_dims)\n",
+        "hidden_units=8 #은닉 상태의 크기 -> =(output_dims)\n",
         "\n",
         "#입력에 해당되는 2D 텐서\n",
         "inputs=np.random.random((timesteps, input_dim))\n",
@@ -2122,7 +2122,7 @@
       "metadata": {
         "id": "t4CCZaKHAIvB"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2137,7 +2137,7 @@
         "id": "g0M0KxyJGmC7",
         "outputId": "22a2947d-a2f2-41fd-9364-0e320c3e4606"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2168,7 +2168,7 @@
         "id": "gfn41Wh1G9PK",
         "outputId": "69236eb3-492d-4807-9bf6-59661b724b14"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2191,7 +2191,7 @@
         "id": "IYmCNb-kHulb",
         "outputId": "9ac65972-044e-413e-e03f-e8c8e76312ec"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2216,7 +2216,7 @@
         "id": "ciA7WcbnH_lz",
         "outputId": "ab4248bc-d3d0-45b8-ade3-bd1b91f22734"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2240,7 +2240,7 @@
         "id": "cowRlX12Irq6",
         "outputId": "b13a30d3-bae6-4d3b-df3e-6facec0b205d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2264,7 +2264,7 @@
         "id": "lwdxiGG0JSd8",
         "outputId": "940da55d-22d3-445a-f455-a73d38636e6a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2291,7 +2291,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2322,7 +2322,7 @@
       "metadata": {
         "id": "wSa2cgYZlT6Y"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2341,7 +2341,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2374,7 +2374,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2410,7 +2410,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2615,7 +2615,7 @@
       "metadata": {
         "id": "EdjV3rldvCMb"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2631,7 +2631,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2755,7 +2755,7 @@
       "metadata": {
         "id": "DKnJXS1S0h8c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2774,7 +2774,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2800,7 +2800,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2830,7 +2830,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2853,7 +2853,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2888,7 +2888,7 @@
       "metadata": {
         "id": "xzj7sMfPDZuw"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2903,7 +2903,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2932,7 +2932,7 @@
       "metadata": {
         "id": "Z-Xcju5PEkpp"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2945,7 +2945,7 @@
       "metadata": {
         "id": "hb4wTOR3E1D5"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2961,7 +2961,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2996,7 +2996,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3253,7 +3253,7 @@
       "metadata": {
         "id": "uORpFJIMINuM"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3268,7 +3268,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
