--- a/네거티브_샘플링.ipynb
+++ b/네거티브_샘플링.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPYrJkRNXzxHMm4onc9d4FU",
+      "authorship_tag": "ABX9TyOeU+6brM05CHUUFUgTC1lC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -630,13 +630,17 @@
         "id": "lqUASR7R_G9C",
         "outputId": "c27a3807-c91e-4ac6-850a-05b726cf25a8"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch :  1 4525.108709495515\n"
+            "Epoch :  1 4525.108709495515\n",
+            "Epoch :  2 3459.9219149015844\n",
+            "Epoch :  3 3296.87788958475\n",
+            "Epoch :  4 3102.162896467373\n",
+            "Epoch :  5 2883.4101948086172\n"
           ]
         }
       ]
@@ -646,27 +650,132 @@
       "source": [
         "import gensim\n",
         "\n",
-        "f=open('vectors.txt', 'w') #쓰기용으로 파일 오픈\n",
-        "f.write('{} {}\\n'.format(vocab_size-1, embed_size))#\n",
-        "vectors=model.get_weights()[0]\n",
+        "f = open('vectors.txt' ,'w')\n",
+        "f.write('{} {}\\n'.format(vocab_size-1,100))\n",
+        "vectors = model.get_weights()[0] #학습된 임베딩 벡터들이 들어간다.\n",
         "for word, i in tokenizer.word_index.items():\n",
-        "  f.write('{} {}\\n'.fotmat(word, ' '.join(map(str, list(vectors[i, :])))))\n",
+        "    f.write('{} {}\\n'.format(word, ' '.join(map(str, list(vectors[i, :]))))) #학습된 임베딩 벡터들의 리스트를 문자열로 공백을 하나 두고 조합한다.\n",
         "f.close()\n",
         "\n",
-        "#모델 로드\n",
-        "w2v=gensim.model.KeyedVectors.load_word2vec_format('./vectors.txt', binary=False)"
+        "# 모델 로드\n",
+        "w2v = gensim.models.KeyedVectors.load_word2vec_format('./vectors.txt', binary=False)"
       ],
       "metadata": {
         "id": "fpdPgV1LCOWH"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w2v.most_similar(positive=['soldier']) #유사성을 알고싶은 단어. 벡터의 유사도와 함께 나타난다."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tpCztrj8IB1h",
+        "outputId": "9723fff2-cec4-4ea3-9d34-3c46c98704c3"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('invading', 0.6523084044456482),\n",
+              " ('journalists', 0.6467673778533936),\n",
+              " ('eastern', 0.63088059425354),\n",
+              " ('empire', 0.6284564733505249),\n",
+              " ('intends', 0.6278830170631409),\n",
+              " ('algeria', 0.625501811504364),\n",
+              " ('gangs', 0.6243679523468018),\n",
+              " ('slaughtering', 0.623967707157135),\n",
+              " ('palestinian', 0.6219696402549744),\n",
+              " ('murdered', 0.6214026212692261)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w2v.most_similar(positive=['doctor'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CvVVtZjUi44S",
+        "outputId": "7c560e1e-2541-419e-a0a3-400cffa2d070"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('fever', 0.5709298849105835),\n",
+              " ('patient', 0.5598241090774536),\n",
+              " ('blood', 0.5523703694343567),\n",
+              " ('nerve', 0.550114631652832),\n",
+              " ('diet', 0.5466668605804443),\n",
+              " ('therapy', 0.544763445854187),\n",
+              " ('treatment', 0.538953423500061),\n",
+              " ('banks', 0.536970853805542),\n",
+              " ('intellect', 0.5359477996826172),\n",
+              " ('organism', 0.5295336246490479)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w2v.most_similar(positive=['police'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nEIwtGynjPpp",
+        "outputId": "44c88414-07ce-448e-d368-0b48e7762cb4"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('agencies', 0.5656498670578003),\n",
+              " ('sufficent', 0.5413706302642822),\n",
+              " ('residents', 0.5229131579399109),\n",
+              " ('federal', 0.5209411978721619),\n",
+              " ('forces', 0.5199903249740601),\n",
+              " ('allies', 0.5137638449668884),\n",
+              " ('legislation', 0.511637270450592),\n",
+              " ('cooperation', 0.5066220164299011),\n",
+              " ('workers', 0.5066180229187012),\n",
+              " ('regime', 0.5018592476844788)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "tpCztrj8IB1h"
+        "id": "LgjNugKAjSH5"
       },
       "execution_count": null,
       "outputs": []
