Colaboratory를 통해 생성됨

--- a/임베딩_모델_실습.ipynb
+++ b/임베딩_모델_실습.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1TbrzI4qTdGAE-SbR33qQ6m-0bQZ0nsYn",
-      "authorship_tag": "ABX9TyM2BBpNxSq6cBG/sWH0Vbby",
+      "authorship_tag": "ABX9TyOCIPHe8+IajvYTBoou+ge0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3234,9 +3234,169 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "similar_doc=model.docvecs.most_similar('동화약품')\n",
+        "print(similar_doc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yrdi0GSLhN7C",
+        "outputId": "97c29dc5-f851-427d-976b-23b6ea53340f"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('종근당', 0.5694501399993896), ('일양약품', 0.5389417409896851), ('동아에스티', 0.5303950309753418), ('영진약품', 0.52590012550354), ('국제약품', 0.5127893686294556), ('대웅제약', 0.5006649494171143), ('삼아제약', 0.49804309010505676), ('유한양행', 0.4948124587535858), ('제일약품', 0.49262869358062744), ('우리들제약', 0.4906221032142639)]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-40-993a3a8678b4>:1: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+            "  similar_doc=model.docvecs.most_similar('동화약품')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "similar_doc = model.docvecs.most_similar('하이트진로')\n",
+        "print(similar_doc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Y9_ePQfwUcd",
+        "outputId": "d742a71e-929d-4071-d3ec-905b7042ee8e"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('하이트진로홀딩스', 0.852299690246582), ('롯데칠성', 0.49534228444099426), ('보해양조', 0.47589626908302307), ('무학', 0.4600858688354492), ('국순당', 0.45674049854278564), ('삼광글라스', 0.3933895528316498), ('크라운제과', 0.3891177177429199), ('금비', 0.3888753354549408), ('경방', 0.3887895345687866), ('롯데제과', 0.38334572315216064)]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-41-10a440d49d85>:1: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+            "  similar_doc = model.docvecs.most_similar('하이트진로')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "similar_doc = model.docvecs.most_similar('LG이노텍')\n",
+        "print(similar_doc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ul-HC7VOwXXW",
+        "outputId": "b8360874-4a9f-441f-d6f3-2ad4b27a1ad0"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('LG전자', 0.5609821677207947), ('LG', 0.5137313008308411), ('LG디스플레이', 0.5061968564987183), ('삼성전기', 0.4702262878417969), ('서울반도체', 0.4302194118499756), ('서울바이오시스', 0.42080795764923096), ('유티아이', 0.4096563160419464), ('라온피플', 0.40924152731895447), ('캠시스', 0.40724584460258484), ('일진디스플', 0.4024339020252228)]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-42-0fd06fded1b7>:1: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+            "  similar_doc = model.docvecs.most_similar('LG이노텍')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "similar_doc = model.docvecs.most_similar('메리츠화재')\n",
+        "print(similar_doc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uIuqD6rVwaEm",
+        "outputId": "012302ac-22d4-4afc-da15-cc0abb46090f"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('메리츠금융지주', 0.7325341105461121), ('한화손해보험', 0.6775943040847778), ('DB손해보험', 0.6579764485359192), ('한화생명', 0.6492629051208496), ('롯데손해보험', 0.6439646482467651), ('흥국화재', 0.6125496029853821), ('현대해상', 0.5966158509254456), ('미래에셋생명', 0.5684045553207397), ('코리안리', 0.565139651298523), ('삼성화재', 0.5533559322357178)]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-43-abc7faabfcd2>:1: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+            "  similar_doc = model.docvecs.most_similar('메리츠화재')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "similar_doc = model.docvecs.most_similar('카카오')\n",
+        "print(similar_doc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oxhBkwcXwdb2",
+        "outputId": "6ee0b1ae-0f3e-4fab-a97b-240bc80c63af"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('위메이드', 0.5186609029769897), ('네오위즈', 0.5135923027992249), ('NAVER', 0.4909822940826416), ('조이맥스', 0.48708370327949524), ('네오위즈홀딩스', 0.48231929540634155), ('데브시스터즈', 0.48090580105781555), ('카카오게임즈', 0.4800323247909546), ('컴투스', 0.473049134016037), ('넥슨지티', 0.4710988700389862), ('베스파', 0.46841689944267273)]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-44-9587b3abb506>:1: DeprecationWarning: Call to deprecated `docvecs` (The `docvecs` property has been renamed `dv`.).\n",
+            "  similar_doc = model.docvecs.most_similar('카카오')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "yrdi0GSLhN7C"
+        "id": "oBXA4wHAwfF3"
       },
       "execution_count": null,
       "outputs": []
