Colaboratory를 통해 생성됨

--- a/BiLSTM으로_한국어_스팀_리뷰_감성_분류.ipynb
+++ b/BiLSTM으로_한국어_스팀_리뷰_감성_분류.ipynb
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "UuHka7GNADcn"
       },
-      "execution_count": null,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -57,19 +57,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0478503-ae70-4e30-ec6d-cb9bd11a0801"
+        "outputId": "3fdc498a-01ee-48c2-bcc5-6ac029f4e7f4"
       },
-      "execution_count": null,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "('steam.txt', <http.client.HTTPMessage at 0x7e80b9ee32b0>)"
+              "('steam.txt', <http.client.HTTPMessage at 0x7e80b59a4d60>)"
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 90
         }
       ]
     },
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "07Vw3LrgAjAW"
       },
-      "execution_count": null,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -95,9 +95,9 @@
           "height": 206
         },
         "id": "-xD3jOb1BVGY",
-        "outputId": "43d1f63b-f94a-49db-daab-5ce74fd98f85"
+        "outputId": "b8019571-fd13-4949-96e3-1a834b96685b"
       },
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-b0d29cc0-b331-491d-9491-091d6051d651\">\n",
+              "  <div id=\"df-b8425753-7d11-44ea-93c4-6acd422afcd1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -166,7 +166,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b0d29cc0-b331-491d-9491-091d6051d651')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b8425753-7d11-44ea-93c4-6acd422afcd1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -179,8 +179,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-5a25c021-6ad0-434a-a487-89817b33d86c\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5a25c021-6ad0-434a-a487-89817b33d86c')\"\n",
+              "    <div id=\"df-531a8d03-97a0-4e94-b534-476f5fa3572e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-531a8d03-97a0-4e94-b534-476f5fa3572e')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -237,7 +237,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-5a25c021-6ad0-434a-a487-89817b33d86c button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-531a8d03-97a0-4e94-b534-476f5fa3572e button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -284,12 +284,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b0d29cc0-b331-491d-9491-091d6051d651 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b8425753-7d11-44ea-93c4-6acd422afcd1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b0d29cc0-b331-491d-9491-091d6051d651');\n",
+              "          const element = document.querySelector('#df-b8425753-7d11-44ea-93c4-6acd422afcd1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -311,7 +311,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 92
         }
       ]
     },
@@ -325,9 +325,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vJ2iZlE-Bo85",
-        "outputId": "32c8ced2-166d-45f6-dee1-62a157cb148c"
+        "outputId": "348346d1-788c-47ad-aad4-999eaa0ad72a"
       },
-      "execution_count": null,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,9 +356,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LIOht5M2BWje",
-        "outputId": "8fe92937-3894-4a0b-cabc-fde129dc1bb8"
+        "outputId": "6330fab3-f0bb-4d54-e382-a97b3f35fd4b"
       },
-      "execution_count": null,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +370,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 94
         }
       ]
     },
@@ -385,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MLOAMgcoBnUe",
-        "outputId": "98480b68-3a08-4f3f-d713-26feb2a5a870"
+        "outputId": "e8df289b-d10e-4b74-de02-d25a1c58655b"
       },
-      "execution_count": null,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,9 +411,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wL_oUzTFCVmF",
-        "outputId": "e80ff369-46c5-469b-d6ee-ed723d59b401"
+        "outputId": "bc2ed580-efec-4210-9e2d-203c756681d3"
       },
-      "execution_count": null,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,9 +436,9 @@
           "height": 444
         },
         "id": "ZjWWLGZDDMfm",
-        "outputId": "f323a443-8b17-47eb-ac50-428255221281"
+        "outputId": "fff0fd32-9f08-4373-e863-978a01dfbb92"
       },
-      "execution_count": null,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -448,7 +448,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 97
         },
         {
           "output_type": "display_data",
@@ -472,9 +472,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3qBz_stlEw4r",
-        "outputId": "1e840370-ae29-4f0f-8d38-e7fc8ecbaefb"
+        "outputId": "8e74418d-cc48-4b30-bd53-0547cb27f825"
       },
-      "execution_count": null,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,15 +501,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MyKBIipZB1Qt",
-        "outputId": "651b5129-be6a-456b-800e-bc59aed95b9c"
+        "outputId": "53d3218f-d208-4986-f8ca-a139c24d2617"
       },
-      "execution_count": null,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-73-159aa2b6927a>:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+            "<ipython-input-99-159aa2b6927a>:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
             "  train_data['reviews']=train_data['reviews'].str.replace('[^ㄱ-ㅎㅏ-ㅣ가-힣]', '')\n"
           ]
         },
@@ -523,7 +523,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 99
         }
       ]
     },
@@ -540,15 +540,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p62sh1l9FPX9",
-        "outputId": "f18d3bbc-51cb-42b0-b8a6-19399231c6c9"
+        "outputId": "cb87d986-d524-46d9-9be7-873e98eb253b"
       },
-      "execution_count": null,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-74-f71194b913c4>:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+            "<ipython-input-100-f71194b913c4>:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
             "  test_data['reviews']=test_data['reviews'].str.replace('[^ㄱ-ㅎㅏ-ㅣ가-힣]', '')\n"
           ]
         },
@@ -562,7 +562,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 100
         }
       ]
     },
@@ -575,7 +575,7 @@
       "metadata": {
         "id": "bgacMVfICqtd"
       },
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -586,7 +586,7 @@
       "metadata": {
         "id": "PaZiBp_FIsWI"
       },
-      "execution_count": null,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -604,7 +604,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o40_A5tCEGTm",
-        "outputId": "3b134a2a-3d0e-49cb-d344-6e4d76d094c9"
+        "outputId": "15ab81e9-ddb2-4290-a610-114c1161efa6"
       },
       "execution_count": null,
       "outputs": [
@@ -612,7 +612,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 64%|██████▍   | 47479/74340 [51:21<55:22,  8.09it/s]"
+            "  0%|          | 123/74919 [00:16<3:31:20,  5.90it/s]"
           ]
         }
       ]
@@ -665,23 +665,10 @@
         "print(\"유니크한 단어 출현빈도 비율 : \", (rare_freq/total_freq)*100)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d14oh366HQOl",
-        "outputId": "4bb3a50f-cf51-49ab-c7c3-4abc935244de"
+        "id": "d14oh366HQOl"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "유니크한 단어 개수의 비율 :  100.0\n",
-            "유니크한 단어 출현빈도 비율 :  100.0\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
