--- a/Bilingual_Evaluation_Understudy_Score.ipynb
+++ b/Bilingual_Evaluation_Understudy_Score.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAm+faLNrvSi6DrhmbYbOr",
+      "authorship_tag": "ABX9TyOHiVmHINz3JpKSelSvcBSU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -240,9 +240,99 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Ca 길이와 가장 근접한 Ref의 길이를 리턴하는 함수\n",
+        "def closest_ref_length(candidate, reference_list):\n",
+        "  ca_len=len(candidate)\n",
+        "  ref_lens=(len(ref) for ref in reference_list)\n",
+        "  #길이 차이를 최소화하는 Ref를 찾아서 Ref으 ㅣ길이를 리턴\n",
+        "  closest_ref_len=min(ref_lens, key=lambda ref_len:(abs(ref_len-ca_len), ref_len)) #ref_len-ca_len의 절댓값\n",
+        "  return closest_ref_len"
+      ],
       "metadata": {
         "id": "eqWWmYhuV5lY"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#BP(brevity penalty) 함수 -> Ca의 길이가 ref보다 짧아서 높은 효율이 나오는 것을 방지하기 위해 곱하는 수\n",
+        "def brevity_penalty(candidate, reference_list):\n",
+        "  ca_len=len(candidate)\n",
+        "  ref_len=closest_ref_length(candidate, reference_list)\n",
+        "\n",
+        "  if ca_len>ref_len: #ca의 길이가 더 길면 BP곱할필요가 없음\n",
+        "    return 1\n",
+        "  elif ca_len==0:#Ca의 길이가 0이면 확률은 0\n",
+        "    return 0\n",
+        "  else: #나머지의 경우 BP를 구하여 반환\n",
+        "    return np.exp(1-ref_len/ca_len)\n"
+      ],
+      "metadata": {
+        "id": "ManurX0vZ47q"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#BLEU(Bilingual Evaluation Understudy Score) 계산 함수\n",
+        "def bleu_score(candidate, reference_list, weights=[0.25, 0.25,0.25,0.25]):\n",
+        "  bp=brevity_penalty(candidate, reference_list)\n",
+        "\n",
+        "  p_n=[modified_precision(candidate, reference_list, n=n) for n, _ in enumerate(weights, start=1)]\n",
+        "  #p1, p2, p3, p4\n",
+        "  score=np.sum([w_i*np.log(p_i) if p_i!=0 else 0 for w_i, p_i in zip(weights, p_n)])\n",
+        "  return bp*np.exp(score)"
+      ],
+      "metadata": {
+        "id": "CoAwIZ0obVJ4"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#nltk의 bleu측정\n",
+        "import nltk.translate.bleu_score as bleu\n",
+        "candidate = 'It is a guide to action which ensures that the military always obeys the commands of the party'\n",
+        "references = [\n",
+        "    'It is a guide to action that ensures that the military will forever heed Party commands',\n",
+        "    'It is the guiding principle which guarantees the military forces always being under the command of the Party',\n",
+        "    'It is the practical guide for the army always to heed the directions of the party'\n",
+        "]\n",
+        "\n",
+        "print(\"실습 코드의 BLEU : \", bleu_score(candidate.split(), list(map(lambda ref:ref.split(), references))))\n",
+        "print(\"패키지 NLTK의 BLEU : \", bleu.sentence_bleu(list(map(lambda ref:ref.split(), references)), candidate.split()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rRpw9qZhcDGS",
+        "outputId": "9c36f50f-4c3d-4462-ac39-d237eb52e92f"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "실습 코드의 BLEU :  0.5045666840058485\n",
+            "패키지 NLTK의 BLEU :  0.5045666840058485\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8H7-3iSlc1_Q"
       },
       "execution_count": null,
       "outputs": []
