--- a/BiLSTM_with_AttentionMechanism.ipynb
+++ b/BiLSTM_with_AttentionMechanism.ipynb
@@ -287,14 +287,18 @@
         "id": "f7-8U8i1LD-f",
         "outputId": "bd291280-6abb-4d2f-8542-02eca84ed612"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/3\n",
-            "48/98 [=============>................] - ETA: 8:42 - loss: 0.6419 - accuracy: 0.6266"
+            "98/98 [==============================] - 1368s 14s/step - loss: 0.6023 - accuracy: 0.6850 - val_loss: 0.5304 - val_accuracy: 0.7166\n",
+            "Epoch 2/3\n",
+            "98/98 [==============================] - 1347s 14s/step - loss: 0.3963 - accuracy: 0.8396 - val_loss: 0.3057 - val_accuracy: 0.8721\n",
+            "Epoch 3/3\n",
+            "98/98 [==============================] - 1329s 14s/step - loss: 0.2645 - accuracy: 0.9062 - val_loss: 0.2941 - val_accuracy: 0.8806\n"
           ]
         }
       ]
@@ -305,10 +309,24 @@
         "print(\"\\n 테스트 정확도 : %.4f\"%(model.evaluate(X_test, y_test)[1]))"
       ],
       "metadata": {
-        "id": "UkoCmr6xLML_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UkoCmr6xLML_",
+        "outputId": "f3f931f8-d719-48f4-fb17-d177f3f922eb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "782/782 [==============================] - 337s 431ms/step - loss: 0.2941 - accuracy: 0.8806\n",
+            "\n",
+            " 테스트 정확도 : 0.8806\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
