Colaboratory를 통해 생성됨

--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMR6/diBqk+tzZnZT2kSOhy",
+      "authorship_tag": "ABX9TyMA8ZzmaSgXM2WcSoK+4DBj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -356,9 +356,47 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#패딩을 마스킹하는 함수\n",
+        "def create_padding_mask(x):\n",
+        "  mask=tf.cast(tf.math.equal(x,0),tf.float32)\n",
+        "  #(batch_size, 1, 1, key의 문장 길이)\n",
+        "  return mask[:,tf.newaxis, tf.newaxis,:]"
+      ],
       "metadata": {
         "id": "0Xu4n4XSjcFB"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(create_padding_mask(tf.constant([[1,21,777,0,0]])))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VOUZwqYaoJMJ",
+        "outputId": "4ac88924-56e0-466e-8bfe-a804790faf46"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor([[[[0. 0. 0. 1. 1.]]]], shape=(1, 1, 1, 5), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KQ5ZPuIvoWPw"
       },
       "execution_count": null,
       "outputs": []
